# form-repl

./: .gitignore  Cargo.toml  README-CN.md  README.md
dev-docs/: CODE_RULES.md  DEVELOPMENT_LOG.md
form-repl-gui/: README-CN.md  README.md
form-repl-gui/src/: index.html
form-repl-gui/src-tauri/: Cargo.toml  tauri.conf.json
form-repl-gui/src-tauri/capabilities/: default.json
form-repl-gui/src-tauri/icons/: icon.icns
form-repl-gui/src-tauri/src/: main.rs
src/: ast.rs  evaluator.rs  lexer.rs  main.rs  parser.rs  repl.rs
src/modules/: config.rs  form.rs  highlight.rs  input.rs  magic.rs  mod.rs  term.rs  theme.rs
